[package]
name = "simple_quic"
version = "0.1.0"
authors = ["shouy <shouyushen@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "0.5"
bitflags = "1"
byteorder = "1"
mio = "0.7"
futures = "0.3"
async-trait = "0.1"
httparse = "1"
pin-utils = "0.1"
async-std = {version = "1",features = ["attributes"]}
log = "0.4"
err-derive = "0.2"
tracing = "0.1"
libc = { version = "0.2", optional = true }
bimap = "0.5"
either = "1.6"